--- a/oneflow/core/functional/functional_api.yaml
+++ b/oneflow/core/functional/functional_api.yaml
@@ -518,7 +518,7 @@
   bind_python: True
 
 - name: "sparse_softmax_cross_entropy"
-  signature: "Tensor (Tensor logits, Tensor label, Int64 depth) => SparseSoftmaxCrossEntropy"
+  signature: "TensorTuple (Tensor logits, Tensor label) => SparseSoftmaxCrossEntropy"
   bind_python: True
 
 - name: "softmax_cross_entropy"
